--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ src="https://www.facebook.com/tr?id=728536533386689&ev=PageView&noscript=1"
         </div>
         <div class="cta-row">
           <!-- TODO: আপনার টেলিগ্রাম লিংক দিন -->
-          <a class="btn btn-primary" href="https://t.me/your_group_link" target="_blank" rel="noopener">🚀 Join Telegram Now</a>
+          <a class="btn btn-primary" href="https://t.me/Runex88aff" target="_blank" rel="noopener">🚀 Join Telegram Now</a>
           <a class="btn btn-ghost" href="#why">আরও জানুন</a>
         </div>
       </div>
@@ -183,7 +183,7 @@ src="https://www.facebook.com/tr?id=728536533386689&ev=PageView&noscript=1"
       <div class="list card">
         <h3>🚀 এখনই জয়েন করুন</h3>
         <p class="muted">দেরি না করে আজই গ্রুপে যোগ দিন এবং এক্সক্লুসিভ সুবিধা নিন।</p>
-        <p style="margin-top:12px"><a class="btn btn-primary" href="https://t.me/your_group_link" target="_blank" rel="noopener">Join Telegram Group</a></p>
+        <p style="margin-top:12px"><a class="btn btn-primary" href="https://t.me/Runex88aff" target="_blank" rel="noopener">Join Telegram Group</a></p>
       </div>
     </section>
 
@@ -193,11 +193,11 @@ src="https://www.facebook.com/tr?id=728536533386689&ev=PageView&noscript=1"
         <strong>🎯 প্রস্তুত? — এক ক্লিকে যোগ দিন</strong>
         <div class="muted">প্রতিদিনের এক্সক্লুসিভ আপডেট মিস করবেন না!</div>
       </div>
-      <a class="btn btn-primary" href="https://t.me/your_group_link" target="_blank" rel="noopener">🚀 Join Now</a>
+      <a class="btn btn-primary" href="https://t.me/Runex88aff" target="_blank" rel="noopener">🚀 Join Now</a>
     </aside>
 
     <footer>
-      © <span id="y"></span> Exclusive Telegram Community — All rights reserved.
+      © <span id="y"></span> RUNEX88 Telegram Community — All rights reserved.
     </footer>
   </main>
 
@@ -208,5 +208,6 @@ src="https://www.facebook.com/tr?id=728536533386689&ev=PageView&noscript=1"
 </body>
 
 </html>
+
 
 
